--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=1234
-DATABASE_NAME='test001'
+DATABASE_PASSWORD=
+DATABASE_NAME=''
 ACCESS_SECRET=''
 REFRESH_SECRET=''
